# adival

./: .gitignore  20tasks.json  AGENTS.md  AGENTS.md.agentBrowser  FAniruddhacodecollegemcpservermanagertoolsall_files.json  FAniruddhacodecollegemcpservermanagertoolsstale_files.json  IMPLEMENTATION_TASKS.md  README.md  all_files.json  all_files_details.json  all_files_with_detailed_perms.json  all_files_with_perms.json  all_stale_files.json  all_threads.json  calendar_data.json  create-docx.js  create_docx.js  debug-task-info.json  document.xml  eval-config.json  eval-results.json  eval_result.json  mcp-memory-server.ts  mem  opencode.json  opencode.jsonc  pack_script.py  package-lock.json  package.json  page-debug.html  pnpm-lock.yaml  pyproject.toml  qmdreadme.md  run-eval.ts  run-task-demo.ts  skills-lock.json  test_exif.py  tsconfig.json  tsconfig.tsbuildinfo  watch-memory.ts  (+1 more)
.opencode/: opencode.json  openwork.json
apps/: session-api-client.ts  session-api.ts
eval/: Eval-methodologies.md  How-to-eval.md  README.md  eval-config.json  eval-results.json  model_skills_report.xlsx  models.json  run-eval.ts  task.md
journal/: 2026-03.journal.md
outputs/: contract_final.docx  deck_normalized.pptx  dirty_data_clean.csv  employee_data_pivot.xlsx  failed_students_output.xlsx  invoices_extracted.csv  promotion_report.docx  sales_data_audited.xlsx
prompts/: AGENTS.md.devBrowser
src/: functions.ts  index.ts  launch-chrome-standalone.cjs  test.ts  types.ts
temp_fix/: [Content_Types].xml
uploads/: contract_redlined.docx  deck_messy.pptx  employee_data.xlsx  (+1 more)
(+1465 files in other folders)
