[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "palettable>=3.3.3",
    "pandas>=2.3.3",
    "scienceplots>=2.2.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
]
